LPS-111270 fix behavior of CollapsablePanel and update RuleItem

--- a/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_collapsable_panel.scss
+++ b/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_collapsable_panel.scss
@@ -2,13 +2,8 @@
 	.collapse-icon-options {
 		position: absolute;
 		right: 16px;
-		top: 25%;
-	}
-
-	.panel-header {
-		button:focus {
-			box-shadow: none !important;
-		}
+		top: 16px;
+		z-index: 999 !important;
 	}
 
 	.collapse-icon-closed.actions,
